[package]
name = "ope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.0", features = ["cargo"] }
directories = "5.0.1"
simplelog = "0.12.1"
time = { version = "0.3.22", features = ["formatting"] }
